# chatbot

./: .gitignore  README.md  pyproject.toml  synthetic_data.txt
artifacts/: feature_names.txt  features.csv  outputs.csv  phase1_model.joblib  train_data.csv
data/provided/: small_sample.jsonl
data/synth/: synthetic_conversations.jsonl  synthetic_conversations_v2.jsonl  synthetic_conversations_v3.jsonl
src/: export_features.py  hf_pipeline_results.json  lexicons.py  ml_tfidf_results.json  phase_1.py  rule_classifier_results.json  schemas.py  utils.py
src/data_gen/: config.py  conversation_utils.py  model_utils.py  synthetic_data_gen.py
src/intent_classification/: config.py  evaluate_hf_classifier.py  evaluate_hf_pipeline.py  evaluate_ml_tfidf.py  evaluate_rule_based.py  quick_test.py
src/intent_classification/base/: __init__.py  classifier.py  data_structures.py  feature_extractor.py
src/intent_classification/classifiers/: hf_pipeline_classifier.py  hf_sequence_classifier.py  ml_tfidf.py  rule_based.py
src/intent_classification/data/: __init__.py  loader.py
src/intent_classification/evaluation/: __init__.py  evaluator.py  metrics.py
src/intent_classification/utils/: __init__.py  common.py
