[project]
name = "chatbot-conversation-intent-classification"
version = "0.1.0"
description = "Booking-intent classifier for hotel chats"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { text = "MIT" }
authors = [{ name = "Tremoço" }]

dependencies = [
  "pandas>=2.2,<3",
  "numpy>=1.26,<3",
  "scikit-learn>=1.3,<2",
  "scipy>=1.10,<2",
  "spacy>=3.7,<4",
  "dateparser>=1.2,<2",
  "joblib>=1.3,<2",
  "typer>=0.12,<0.13",
  "rich>=13.7,<14",
  "transformers",
  "torch==2.7.0+cu126",
  "accelerate",
  "pip",
  "hf_xet",
  "bitsandbytes"
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7,<4",
  "black>=24.3,<25",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[tool.black]
line-length = 80
target-version = ["py310"]

[tool.ruff]
line-length = 80
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


# Run: python -m spacy download en_core_web_sm after uv sync